# TinCanRust

./: Cargo.toml  README.md
src/: about.rs  activity.rs  activity_definition.rs  agent.rs  agent_account.rs  context.rs  context_activities.rs  extensions.rs  group.rs  interaction_component.rs  interaction_type.rs  json.rs  language_map.rs  lib.rs  result.rs  score.rs  statement.rs  statement_ref.rs  statement_target.rs  verb.rs  version.rs
