[package]
name = "tincan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
http = "0.2.8"
phf = { version = "0.11.1", features = ["macros"] }
serde = "1.0.152"
serde_json = "1.0.91"
timespan = "0.2.0"
